--- a/Export_HTML.html
+++ b/Export_HTML.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head><meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>html_export</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
+<title>Export_HTML</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <style type="text/css">
     pre { line-height: 125%; }
 td.linenos .normal { color: inherit; background-color: transparent; padding-left: 5px; padding-right: 5px; }
@@ -7482,14 +7482,16 @@ a.anchor-link {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<center>
 <div style="font-family: 'Times New Roman', serif; text-align: center; margin: auto;">
 <img alt="Northeastern University Logo" src="https://image-tc.galaxy.tf/wipng-3jcsiz4vzvffnpa7dfizxcdbp/northeastern-university.png" style="width: 200px; margin-bottom: 1em;"/>
-<h1 style="font-size: 2.5em; margin-bottom: 0.5em;">Assignment 999</h1>
+<h1 style="font-size: 2.5em; margin-bottom: 0.5em;">Assignment 1</h1>
 <h2 style="font-size: 1.5em; margin-bottom: 0.3em;">EAI6010 72035 - Applications of Artificial Intelligence</h2>
 <h2 style="font-size: 1.5em; margin-bottom: 0.3em;">Name Surname</h2>
 <h3 style="font-size: 1.2em; margin-bottom: 0.3em; font-style: italic;">Lecturer: Prof. Vladimir Shapiro</h3>
-<p style="font-size: 1em; margin-top: 2em; font-weight: bold;">Spring Term</p>
+<h3 style="font-size: 1em; margin-top: 2em; font-weight: bold; text-align: center;">Spring Term</h3>
 </div>
+</center>
 </div>
 </div>
 </div>
@@ -7573,7 +7575,10 @@ a.anchor-link {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p>Nunc in velit neque. Cras dui nunc, maximus non ornare a, tempor quis lorem. Morbi feugiat sodales magna quis lacinia. Pellentesque porttitor ex id nisi pretium lacinia. Proin nec sapien volutpat, porttitor purus nec, elementum enim. Pellentesque sed metus risus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec cursus eleifend neque, id interdum metus eleifend in.</p>
+<p>Nunc in velit neque. Cras dui nunc, maximus non ornare a, tempor quis lorem. Morbi feugiat sodales magna quis lacinia. Pellentesque porttitor ex id nisi pretium lacinia. Proin nec sapien volutpat, porttitor purus nec, elementum enim.</p>
+<p><strong>Q1 Pellentesque at vestibulum augue, non gravida tellus?</strong></p>
+<p>Pellentesque sed metus risus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec cursus eleifend neque, id interdum metus eleifend in.</p>
+<p><strong>A1 Pellentesque at vestibulum augue, non gravida tellus.</strong></p>
 </div>
 </div>
 </div>
@@ -7590,7 +7595,7 @@ a.anchor-link {
 <span class="k">def</span> <span class="nf">guess_the_number</span><span class="p">():</span>
     <span class="n">number_to_guess</span> <span class="o">=</span> <span class="n">random</span><span class="o">.</span><span class="n">randint</span><span class="p">(</span><span class="mi">1</span><span class="p">,</span> <span class="mi">10</span><span class="p">)</span>
     <span class="nb">print</span><span class="p">(</span><span class="s2">"Guess the number between 1 and 10."</span><span class="p">)</span>
-    
+
     <span class="n">attempts</span> <span class="o">=</span> <span class="mi">3</span>  <span class="c1"># Allow the user 3 attempts</span>
     <span class="k">while</span> <span class="n">attempts</span> <span class="o">&gt;</span> <span class="mi">0</span><span class="p">:</span>
         <span class="n">guess</span> <span class="o">=</span> <span class="nb">int</span><span class="p">(</span><span class="nb">input</span><span class="p">(</span><span class="s2">"Enter your guess: "</span><span class="p">))</span>  <span class="c1"># Get user input</span>
@@ -7618,10 +7623,9 @@ a.anchor-link {
 <div class="jp-RenderedText jp-OutputArea-output" data-mime-type="text/plain" tabindex="0">
 <pre>Guess the number between 1 and 10.
 Incorrect! You have 2 attempts left.
-Incorrect! You have 2 attempts left.
 Incorrect! You have 1 attempt left.
 Incorrect! You have 0 attempts left.
-Sorry, you've run out of attempts. The number was 7.
+Sorry, you've run out of attempts. The number was 3.
 </pre>
 </div>
 </div>
@@ -7660,7 +7664,7 @@ Sorry, you've run out of attempts. The number was 7.
 <div align="center">
 <img alt="Descriptive text about the image for accessibility." src="https://www.globalenergyinstitute.org/sites/default/files/2021-04/Blog%20Graph%201%20-%204.16.2021.png"/>
 <br/>
-<p><strong>Figure 1.</strong> Descriptive caption of what the figure represents.</p>
+<h4><strong>Figure 1.</strong> Descriptive caption of what the figure represents. (author)</h4>
 </div>
 </div>
 </div>
